# note-reader

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
content/: README.txt  index.json  meta.json
src/: App.vue  api.ts  docx.ts  main.ts  markdown.ts  prefs.ts  router.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: content.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/components/: AppTopbar.vue  CloseConfirmDialog.vue  OnboardDialog.vue  SessionBanner.vue  TagChips.vue
src/views/: ArticleView.vue  ColumnView.vue  HomeView.vue  SettingsView.vue
