[package]
name = "note-summary"
version = "0.1.1"
description = "Note Reader - local tech column reader"
authors = ["wangda"]
edition = "2021"

[lib]
name = "note_summary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
